Einfügen eines Absatzlabels

--- a/Tex/bibliography.bib
+++ b/Tex/bibliography.bib
@@ -1,61 +1,354 @@
-﻿% This file was created with Citavi 6.10.0.0
+﻿% This file was created with Citavi 6.14.0.0
 
-@article{Ellison.2005,
- author = {Ellison, Glenn},
+@article{Anderson.1999,
+ author = {Anderson, Simon P. and Renault, Regis},
+ year = {1999},
+ title = {Pricing, Product Diversity, and Search Costs: A Bertrand-Chamberlin-Diamond Model},
+ pages = {719},
+ volume = {30},
+ number = {4},
+ journal = {The RAND Journal of Economics},
+ doi = {10.2307/2556072},
+ file = {Anderson and Renault 1999 - Pricing, Product Diversity, and Search Costs:Attachments/Anderson and Renault 1999 - Pricing, Product Diversity, and Search Costs.pdf:application/pdf}
+}
+
+
+@article{Armstrong.2009,
+ abstract = {[This article examines the implications of {\textquotedbl}prominence{\textquotedbl} in search markets. We model prominence by supposing that the prominent firm will be sampled first by all consumers. If there are no systematic quality differences among firms, we find that the prominent firm will charge a lower price than its less prominent rivals. Making a firm prominent will typically lead to higher industry profit but lower consumer surplus and welfare. The model is extended by introducing heterogeneous product qualities, in which case the firm with the highest-quality product has the greatest incentive to become prominent, and making it prominent will boost industry profit, consumer surplus, and welfare.]},
+ author = {Armstrong, Mark and Vickers, John and Zhou, Jidong},
+ year = {2009},
+ title = {Prominence and Consumer Search},
+ url = {http://www.jstor.org/stable/25593705},
+ pages = {209--233},
+ volume = {40},
+ number = {2},
+ journal = {The RAND Journal of Economics},
+ file = {Armstrong, Vickers et al. 2009 - Prominence and Consumer Search:Attachments/Armstrong, Vickers et al. 2009 - Prominence and Consumer Search.pdf:application/pdf}
+}
+
+
+@article{Armstrong.2019,
+ author = {Armstrong, Mark and Vickers, John},
+ year = {2019},
+ title = {Discriminating Against Captive Customers},
+ pages = {257--272},
+ volume = {1},
+ number = {3},
+ issn = {2640-205X},
+ journal = {American Economic Review: Insights},
+ doi = {10.1257/aeri.20180581},
+ file = {Armstrong and Vickers 2019 - Discriminating Against Captive Consumers:Attachments/Armstrong and Vickers 2019 - Discriminating Against Captive Consumers.pdf:application/pdf}
+}
+
+
+@article{Choe.2018,
+ abstract = {We present a model of dynamic competition between two firms where firms gather customer information through first-period purchase. This creates asymmetric information in the second period whereby a firm knows more about its own past customers than its competitor does.We examine how the ability to offer personalized prices based on customer information affects prices and profit over the two periods. When product differentiation is exogenously fixed, asymmetric information leads to two asymmetric equilibria where one firm chooses more aggressive pricing to secure a larger first-period market share. When product differentiation is also chosen endogenously, there continue to exist two asymmetric equilibria where one firmchooses more aggressive positioning. The more aggressive firm, whether through pricing or positioning, can force the game to be played to its advantage. But both firms end up worse off compared to when they use simpler pricing strategies or commit to substantial product differentiation.},
+ author = {Choe, Chongwoo and King, Stephen and Matsushima, Noriaki},
+ year = {2018},
+ title = {Pricing with Cookies: Behavior-Based Price Discrimination and Spatial Competition},
+ keywords = {behavior-based price discrimination;endogenous product choice;personalized pricing;spatial competition},
+ pages = {5669--5687},
+ volume = {64},
+ number = {12},
+ issn = {0025-1909},
+ journal = {Management Science},
+ doi = {10.1287/mnsc.2017.2873},
+ file = {Choe et al 2018 - Pricing with Cookies Behaviour-Based Price Discrimination and Spatial Competition:Attachments/Choe et al 2018 - Pricing with Cookies Behaviour-Based Price Discrimination and Spatial Competition.pdf:application/pdf}
+}
+
+
+@article{dAspremont.1979,
+ author = {d'Aspremont, C. and Gabszewicz, J. Jaskold and Thisse, J.-F.},
+ year = {1979},
+ title = {On Hotelling's {\textquotedbl}Stability in Competition{\textquotedbl}},
+ pages = {1145},
+ volume = {47},
+ number = {5},
+ issn = {00129682},
+ journal = {Econometrica},
+ doi = {10.2307/1911955},
+ file = {d'Aspremont et al 1979 - On Hotelling's Stability in Competition:Attachments/d'Aspremont et al 1979 - On Hotelling's Stability in Competition.pdf:application/pdf}
+}
+
+
+@article{Davies.2005,
+ author = {Davies, Antony and Cline, Thomas W.},
  year = {2005},
- title = {A Model of Add-on Pricing},
- url = {https://academic.oup.com/qje/article/120/2/585/1933948},
- urldate = {11.11.2021},
- pages = {585--637},
- volume = {120},
- number = {2},
- issn = {0033-5533},
- journal = {The Quarterly Journal of Economics},
- doi = {10.1093/qje/120.2.585},
- file = {Ellison 2005 - A Model of Add-On Pricing:Attachments/Ellison 2005 - A Model of Add-On Pricing.pdf:application/pdf}
+ title = {A consumer behavior approach to modeling monopolistic competition},
+ pages = {797--826},
+ volume = {26},
+ number = {6},
+ issn = {01674870},
+ journal = {Journal of Economic Psychology},
+ doi = {10.1016/j.joep.2005.05.003},
+ file = {Davies Cline 2005 - A Consumer Behavior Approach to Modelling Monopolistic Competition:Attachments/Davies Cline 2005 - A Consumer Behavior Approach to Modelling Monopolistic Competition.pdf:application/pdf}
 }
 
 
-@article{Gabaix.2006,
- author = {Gabaix, Xavier and Laibson, David},
- year = {2006},
- title = {Shrouded Attributes, Consumer Myopia, and Information Suppression in Competitive Markets},
- url = {http://nrs.harvard.edu/urn-3:HUL.InstRepos:4554333},
- urldate = {04.11.2021},
- pages = {505--540},
- volume = {121},
- number = {2},
- issn = {0033-5533},
- journal = {The Quarterly Journal of Economics},
- doi = {10.1162/qjec.2006.121.2.505},
- file = {3 Limited Attention and Competition:Attachments/3 Limited Attention and Competition.pdf:application/pdf}
+@book{Emilien.2017,
+ year = {2017},
+ title = {Consumer perception of product risks and benefits},
+ address = {Cham},
+ publisher = {Springer},
+ isbn = {9783319505305},
+ editor = {Emilien, G{\'e}rard and Weitkunat, Rolf and L{\"u}dicke, Frank},
+ doi = {10.1007/978-3-319-50530-5},
+ file = {Emilien, Weitkunat et al. (Ed.) 2017 - Consumer perception of product risks:Attachments/Emilien, Weitkunat et al. (Ed.) 2017 - Consumer perception of product risks.pdf:application/pdf}
 }
 
 
-@article{Shapiro.1995,
- author = {Shapiro, Carl},
+@book{Ezrachi.2016,
+ author = {Ezrachi, Ariel and Stucke, Maurice E.},
+ year = {2016},
+ title = {Virtual Competition: The Promise and the Perils of the Algorithm-Driven Economy},
+ address = {Cambridge MA},
+ publisher = {{Harvard University Press}},
+ isbn = {9780674545472}
+}
+
+
+@article{Ezrachi.2016b,
+ abstract = {Critically examining the complex algorithm-driven environment, the authors expect to witness imperfections of the new market dynamics, including
+
+-an increased risk of collusion: hub-and-spoke cartels enabled by competitors using a single algorithms or tacit collusion 
+
+-behavioural disctimination/behaviour-based price discrimination: harvesting of personal data allows firms to tailor their advertising (and the timing of that advertising) to consumer behaviour, increasing profits by increasing sales and reducing consumer surplus
+
+-excessive concentration of market power in the hands of plattform providers, enabling them to control market success (not access)},
+ author = {Ezrachi, Ariel and Stucke, Maurice E.},
+ year = {2016},
+ title = {Virtual Competition: Editorial},
+ url = {doi:10.1093/jeclap/lpw083},
+ pages = {585--586},
+ volume = {7},
+ number = {9},
+ journal = {Journal of European Competition Law {\&} Practice},
+ file = {Ezrachi and Stucke 2016 - Virtual Competition (Ed note):Attachments/Ezrachi and Stucke 2016 - Virtual Competition (Ed note).pdf:application/pdf}
+}
+
+
+@article{Fudenberg.2000,
+ abstract = {We present a model of dynamic competition between two firms where firms
+
+gather customer information through first-period purchase. This creates asymmetric information
+
+in the second period whereby a firm knows more about its own past customers
+
+than its competitor does.We examine how the ability to offer personalized prices based on
+
+customer information affects prices and profit over the two periods. When product differentiation
+
+is exogenously fixed, asymmetric information leads to two asymmetric equilibria
+
+where one firm chooses more aggressive pricing to secure a larger first-period market
+
+share. When product differentiation is also chosen endogenously, there continue to exist
+
+two asymmetric equilibria where one firmchooses more aggressive positioning. The more
+
+aggressive firm, whether through pricing or positioning, can force the game to be played
+
+to its advantage. But both firms end up worse off compared to when they use simpler
+
+pricing strategies or commit to substantial product differentiation.},
+ author = {Fudenberg, Drew and Tirole, Jean},
+ year = {2000},
+ title = {Customer Poaching and Brand Switching},
+ url = {https://www.jstor.org/stable/2696352},
+ pages = {634--657},
+ volume = {31},
+ number = {4},
+ journal = {The RAND Journal of Economics},
+ file = {Fudenberg and Tirole 2000 - Customer Poaching and Brand Switching:Attachments/Fudenberg and Tirole 2000 - Customer Poaching and Brand Switching.pdf:application/pdf}
+}
+
+
+@article{Graitson.1980,
+ author = {Graitson, D.},
+ year = {1980},
+ title = {On Hotelling's `stability in competition' again},
+ pages = {1--6},
+ volume = {6},
+ number = {1},
+ issn = {01651765},
+ journal = {Economics Letters},
+ doi = {10.1016/0165-1765(80)90048-8}
+}
+
+
+@article{Hotelling.1929,
+ author = {Hotelling, Harold},
+ year = {1929},
+ title = {Stability in Competition},
+ pages = {41},
+ volume = {39},
+ number = {153},
+ issn = {00130133},
+ journal = {The Economic Journal},
+ doi = {10.2307/2224214},
+ file = {Hotelling 1929 - Stability in Competition:Attachments/Hotelling 1929 - Stability in Competition.pdf:application/pdf}
+}
+
+
+@article{Kats.1995,
+ author = {Kats, Amoz},
  year = {1995},
- title = {Aftermarkets and Consumer Welfare: Making Sense of Kodak},
- url = {https://www.jstor.org/stable/40843290},
- urldate = {20.11.2021},
- pages = {483--511},
- volume = {63},
- number = {2},
- journal = {Antitrust Law Journal},
- file = {Shapiro 1995{\_}Aftermarkets and Consumer Welfare Making Sense of Kodak:Attachments/Shapiro 1995{\_}Aftermarkets and Consumer Welfare Making Sense of Kodak.pdf:application/pdf}
+ title = {More on Hotelling's stability in competition},
+ pages = {89--93},
+ volume = {13},
+ number = {1},
+ issn = {01677187},
+ journal = {International Journal of Industrial Organization},
+ doi = {10.1016/0167-7187(94)00445-8}
+}
+
+
+@article{Kuksov.2004,
+ abstract = {[Buyer search costs for price are changing in many markets. Through a model of buyer and seller behavior, I consider the effects of changing search costs on prices both when product differentiation is fixed and when it is endogenously determined in equilibrium. If firms cannot change product design, lower buyer search costs for price lead to increased price competition. However, if product design is a decision variable, lower search costs for price may also lead to higher product differentiation, which decreases price competition. In this case, the overall effect of lower buyer search costs for price may even be higher prices, lower social welfare, and higher industry profits. The result is especially interesting because recent technological changes, such as Internet shopping, can affect the market structure through lowering buyer search costs.]},
+ author = {Kuksov, Dmitri},
+ year = {2004},
+ title = {Buyer Search Costs and Endogenous Product Design},
+ url = {http://www.jstor.org/stable/30036684},
+ pages = {490--499},
+ volume = {23},
+ number = {4},
+ issn = {07322399},
+ journal = {Marketing Science},
+ file = {Kuksov 2004 - Buyer Search Costs and Endogenous:Attachments/Kuksov 2004 - Buyer Search Costs and Endogenous.pdf:application/pdf}
+}
+
+
+@article{Lambertini.2013,
+ author = {Lambertini, Luca and Orsini, Raimondello},
+ year = {2013},
+ title = {On Hotelling's `stability in competition' with network externalities and switching costs},
+ pages = {873--883},
+ volume = {92},
+ number = {4},
+ issn = {10568190},
+ journal = {Papers in Regional Science},
+ doi = {10.1111/j.1435-5957.2012.00469.x},
+ file = {Lambertini, Orsini 2013 - On Hotelling's `stability in competition':Attachments/Lambertini, Orsini 2013 - On Hotelling's `stability in competition'.pdf:application/pdf}
+}
+
+
+@book{MasCollel.1995,
+ author = {Mas-Collel, Andreu and Whinston, Michael D. and Green, Jerry R.},
+ year = {1995},
+ title = {Microeconomic Theory},
+ address = {New York},
+ publisher = {{Oxfort University Press}},
+ file = {Mas-Collel, Whinston, Green Microeconomic Theory:Attachments/Mas-Collel, Whinston, Green Microeconomic Theory.pdf:application/pdf}
+}
+
+
+@book{Nicholson.2016,
+ author = {Nicholson, Walter and Snyder, Christopher},
+ year = {2016},
+ title = {Microeconomic Theory: Basic Principles and Extensions},
+ address = {Boston MA},
+ edition = {12},
+ publisher = {{Cengage Learning}},
+ isbn = {9781305505797},
+ file = {Nicholson, Snyder - Microeconomic Theory - Basic Principles and Extensions (12th Edition):Attachments/Nicholson, Snyder - Microeconomic Theory - Basic Principles and Extensions (12th Edition).pdf:application/pdf}
+}
+
+
+@article{Stahl.1982,
+ author = {Stahl, Konrad},
+ year = {1982},
+ title = {Differentiated Products, Consumer Search, and Locational Oligopoly},
+ pages = {97},
+ volume = {31},
+ number = {1/2},
+ issn = {00221821},
+ journal = {The Journal of Industrial Economics},
+ doi = {10.2307/2098007},
+ file = {Stahl 1982 - Differentiated Products, Consumer Search, and Locational Oligopoly:Attachments/Stahl 1982 - Differentiated Products, Consumer Search, and Locational Oligopoly.pdf:application/pdf}
+}
+
+
+@article{Stahl.1989,
+ abstract = {N-identical stores compete by choosing prices for a homogeneous good with constant marginal costs. Consumers search sequentially with perfect recall. Some consumers have zero search costs, while all others have a positive search cost, c. There is a unique symmetric Nash Equilibrium price distribution that changes smoothly from {\textquotedbl}marginal cost pricing{\textquotedbl} to {\textquotedbl}monopoly pricing{\textquotedbl} as search cost and population parameters change. Remarkably, as the number of stores increases, the NE becomes more monopolistic.},
+ author = {Stahl, Dale O.},
+ year = {1989},
+ title = {Oligopolistic Pricing with Sequential Consumer Search},
+ url = {http://www.jstor.org/stable/1827927},
+ keywords = {consumer search},
+ pages = {700--712},
+ volume = {79},
+ number = {4},
+ issn = {00028282},
+ journal = {The American Economic Review},
+ file = {Stahl 1989 - Oligopolistic Pricing with Sequential Consumer:Attachments/Stahl 1989 - Oligopolistic Pricing with Sequential Consumer.pdf:application/pdf}
+}
+
+
+@article{Stigler.1961,
+ author = {Stigler, George J.},
+ year = {1961},
+ title = {The Economics of Information},
+ url = {https://www.jstor.org/stable/1829263},
+ pages = {213--225},
+ volume = {69},
+ number = {3},
+ journal = {Journal of Political Economy},
+ file = {Stigler 1961 - The Economics of Information:Attachments/Stigler 1961 - The Economics of Information.pdf:application/pdf}
+}
+
+
+@article{Varian.1980,
+ author = {Varian, Hal R.},
+ year = {1980},
+ title = {A Model of Sales},
+ url = {http://www.jstor.org/stable/1803562},
+ pages = {651--659},
+ volume = {70},
+ number = {4},
+ issn = {00028282},
+ journal = {The American Economic Review},
+ file = {Varian 1980 - A Model of Sales:Attachments/Varian 1980 - A Model of Sales.pdf:application/pdf;Varian 1980 - A Model of Sales (2):Attachments/Varian 1980 - A Model of Sales (2).pdf:application/pdf}
 }
 
 
 @book{Varian.2010,
  author = {Varian, Hal R.},
  year = {2010},
- title = {Intermediate microeconomics: A modern approach},
- keywords = {Microeconomics},
- address = {New York},
- edition = {8th ed.},
- publisher = {{W.W. Norton {\&} Co}},
- isbn = {9780393934243},
- file = {Intermediate Microeconomics - A Modern Approach 8E (Varian):Attachments/Intermediate Microeconomics - A Modern Approach 8E (Varian).pdf:application/pdf}
+ title = {Intermediate Microeconomics: A Modern Approach},
+ address = {New York NY},
+ edition = {8. ed., internat. student ed.},
+ publisher = {{W. W. Norton {\&} Company}},
+ isbn = {978-0-393-93424-3},
+ file = {Varian - Intermediate Microeconomics - A Modern Approach 8E:Attachments/Varian - Intermediate Microeconomics - A Modern Approach 8E.pdf:application/pdf}
+}
+
+
+@book{Wang.2018,
+ author = {Wang, Susheng},
+ year = {2018},
+ title = {Microeconomic Theory},
+ address = {Singapore},
+ edition = {4},
+ publisher = {Springer},
+ isbn = {978-981-13-0040-0},
+ series = {Springer Texts in Business and Economics},
+ doi = {10.1007/978-981-13-0041-7},
+ file = {Wang - Microeconomic Theory:Attachments/Wang - Microeconomic Theory.pdf:application/pdf}
+}
+
+
+@article{Wolinsky.1986,
+ author = {Wolinsky, Asher},
+ year = {1986},
+ title = {True Monopolistic Competition as a Result of Imperfect Information},
+ keywords = {consumer search},
+ pages = {493},
+ volume = {101},
+ number = {3},
+ issn = {00335533},
+ journal = {The Quarterly Journal of Economics},
+ doi = {10.2307/1885694},
+ file = {Wolinsky 1986 - True Monopolistic Competition as a Result of Imperfect Information:Attachments/Wolinsky 1986 - True Monopolistic Competition as a Result of Imperfect Information.pdf:application/pdf}
 }
 
 
