--- a/Tex/masterarbeit.tex
+++ b/Tex/masterarbeit.tex
@@ -1,5 +1,4 @@
 \documentclass[a4paper, 11 pt, fleqn]{article}
-
 % Layout und Allgemeines
 \usepackage[left = 2.5 cm, right = 2.5 cm, top = 2.5 cm, bottom = 2.5 cm ]{geometry} % Seitenränder
 \usepackage[utf8]{inputenc} % Encoding
@@ -23,7 +22,6 @@
 \usepackage{subcaption}
 \usepackage{pdflscape}
 \usepackage{hyperref}
-
 % Bunter Text
 \usepackage{xcolor}
 \graphicspath{{images/}}
@@ -95,10 +93,12 @@
 %
 \section{Introduction} \label{sec:intro}
 %
+\textcolor{orange}{
 \citet{Choe.2018} is chosen due to its significant contribution to the literature. The model they develop is dynamic and
 was innovative in the sense that endogenously created asymmetric information leads to multiple and asymmetric equilibria with
-and without endogenous product choice even when firms are symmetric ex ante. The asymmetry in equlibrium depends on the foward-looking
-tendency of firms (positive discount factor for the future). \textcolor{red}{Siehe Content-Reiter Citavi}
+and without endogenous product choice even when firms are symmetric ex ante. The asymmetry in equilibrium depends on the foward-looking
+tendency of firms (positive discount factor for the future).}
+\textcolor{red}{Siehe Content-Reiter Citavi}
 
 \subsection{Price Differentiation} \label{ssec:price-diff}
 Types of price discrimination
@@ -109,98 +109,101 @@ Mostly Hotelling (incl. impossibility result $\to$ relevance for Choe) and maybe
 \section{\citet{Choe.2018}: BBPD and Spatial Competition in a Dynamic Model} \label{sec:choe-2018-intro}
 %
 This section provides an introduction to the model presented in \citet{Choe.2018}. The present a model that combines
-behaviour-based price discrimination with spatial competition. A brief overview of the model is followed by a thorough
+behaviour-based price discrimination with spatial competition. The central contribution of the model is to endow firms
+with tracking technology~--~e.g. cookies~--~that allows firms to collect information on customers and later exploit said
+information to discriminate against consumers. A brief overview of the model is followed by a more thorough
 exposition below. The model is dynamic and comprises two periods and two firms.
 In the first period, firms choose their location as they do in the standard Hotelling model with quadratic transportation costs
-but also track all consumers that decide to purchase from them in this period. This creates informational asymmetries as
-firms can only track customers that purchased from \textit{them}. Once chosen, locations are fixed for the entirety of the
-game. Note that the competiton for location is also a competition for information. In the baseline model, this thus concludes the
-spatial competition between firms. Customer's location in the Hotelling linear city over [0,\,1] is the only source of heterogeneity
-in the set of consumers.\footnote{This is sufficient as a source of heterogeneity as variation in willingness to pay based on different
+but also track all consumers who decide to purchase from them in said period. information asymmetries arise since
+firms can only track customers who purchased from \textit{them}. Once chosen, locations are fixed for the entirety of the
+game. Crucially, competiton for location is also a competition for information. In the baseline model, the location game resolves
+spatial competition between firms. Customer's location in the Hotelling linear city over [0,1] is the only source of heterogeneity
+in the set of consumers.\footnote{Differences in location are sufficient as a source of heterogeneity as variation in willingness to pay based on different
 transportation costs is the only property required by the model.} In the second period, firms can exploit their private information by
 discriminating against consumers based on their decisions from the first period:~firms offer `personalised pricing' (p.~5672) to
 \textit{each} consumer who purchased from that firm in the first period. Firms also set a uniform `poaching' price (p.~5672) in
 order to attract consumers who previously purchased from their competitor. Firms simultaneously choose the poaching price first,
-after which they set the individualised prices for their existing customers. This price structure hinges on the ability of firms
+after which they set the individualised prices for their existing customers. The price structure hinges on the ability of firms
 to track their customers in the first period and endogenously create private information. Consumers then observe three prices
 prior to their purchase decision in the second period: their personalised price and the two poaching prices; they only care about
-the lowest price absent any loyalty or fairness concerns. The authors assume that the inclusion of ``bevioral elements to consumer
-choice is likely to change [the] results substantially.'' (p.~5672) The model is dynamic since firms have multiple periods to act,
+the lowest price absent any loyalty or fairness concerns. The authors recognise that the inclusion of ``bevioral elements to consumer
+choice is likely to change [the] results substantially'' (p.~5672) \textcolor{red}{Also, was machen wir daraus? Der Satz fällt von einer Klippe}. The model is dynamic since firms have multiple periods to act,
 multiple decisions to make and interact with one another. Accordingly, firms intertemporally maximise their total profits over both
 periods. The authors thus endow firms (and consumers) with positive discount factors. The discounting of future profits by firms
 ensures the existance of asymmetric equilibria; if firms have no intertemporal prefence for second-period profits, equilibria are
 symmetric irrespecive of consumers' discount factors.
 %
-\subsection{Baseline Model} \label{sec:choe-baseline} % based on Section 2 of \citet{Choe.2018}
-The firm comprises two firms that compete in a Hotelling linear city with quadratic costs for location and consumers in a two-stage game
-with perods $\tau = 1,\,2$. Consumers are uniformly distributed on [0,\,1] where consumer $x$ is simply located at $x$.
-Consumers incur quadratic transportation costs. Firms have full knowledge of this setup. Furthermore, firms are assumed to have constant
-marginal cost of production; this is~--~as is common in this strain of the literature~--~normalised to 0. Over the course of the game,
-firms gather information and engage in price discrimination against consumers. Consumers are price takers and simply act as a source of
-demand without having any notable actions to chose from.
+\subsection{\textcolor{red}{The Model}} \label{sec:choe-baseline} % based on Section 2 of \citet{Choe.2018}
+The model comprises two firms competing in a Hotelling linear city with quadratic transportation costs for location and consumers in a two-stage game
+with perods $\tau = 1,2$. Consumers are uniformly distributed on [0,\,1] where consumer $x$ is simply located at $x$.
+Consumers incur quadratic transportation costs. Firms have full knowledge of consumer behaviour. Furthermore, firms are assumed to have constant
+marginal cost of production, normalised to 0. Over the course of the game, firms gather information and engage in price discrimination
+against consumers. Consumers are price takers and simply act as a source of demand without having any notable actions to chose from.
 %
-\subsubsection{Firms}
+\subsubsection{Firms} \label{ssec:choe-firms}
 \textcolor{red}{Grafiken erstellen, um Spiel aus Sicht der Firma anschaulicher darzustellen?}
-Firms are indexed by $i = A,\,B$ and act as duopolists. Firms compete for location for $\tau=1$. Since firms can only gather relevant
-information in the first period, the location game is at the same time a contest for (private) information. The outcome of this game
-determines the distribution of endogenously created private information among the dupolists and their respective ability to engage in
-price discrimination. Firms set a unform price $P^1_i$ in the first period and track their customers. For each consumer, a firm knows
-whether it was a customer in the first period. \citet[p. 5672]{Choe.2018} describe the information gain from tracking as follows:
-let $\mathscr{A}$ denote the set of consumers that are a customer of firm $A$ in $\tau=1$. After $\tau=1$, firm $A$ knows
-$\forall x \in [0,\,1]$ whether $x\in \mathscr{A}$ and also the location~$x$ of consumer~$x$ if that consumer was indeed a customer
-of firm~$A$ in the first period. This similarly holds with customer set~$\mathscr{B}$ and customers~$y$ for firm~$B$.
-The model structure assumed by \citet{Choe.2018} in conjunction with the tracking mechanism
-implies that both firms know the location of the indifferent consumer \textcolor{red}{$\hat{x}$ benennen ja/nein?} (marginally above (below) the rightmost (leftmost) consumer in their
-set of first-period customers, depending on whether the firm served the customers to left (right) of the indifferent consumer) and can, with
-certainty, assign non-customers their first-period supplier since there are only two firms and the world is linear. If the model were to include
-$n > 3$ competing firms, setting an efficient poaching price would likely be a much more involved process for any given firm. \\
+Firms are indexed by $i = A,B$ and act as duopolists. They engage in Bertrand competition. Firms compete for location for $\tau=1$.
+Since firms can only gather relevant information in the first period, the location game is at the same time a contest for (private)
+information. The outcome of the location game determines the distribution of endogenously created private information among the dupolists and
+their respective ability to engage in price discrimination. Firms set a uniform price $P^1_i$ in the first period and track their customers.
+Firms know whether a given consumer was a customer in the first period. \citet[p. 5672]{Choe.2018} describe the information gain from
+tracking (they assume firms use technology similar to cookies) as follows: let $\mathscr{A}$ denote the set of consumers who are a
+customer of firm $A$ in $\tau=1$. After $\tau=1$, firm~$A$ knows for all $x \in [0,\,1]$ whether $x\in \mathscr{A}$ and also the
+location~$x$ of consumer~$x$ if the consumer was indeed a customer of firm~$A$ in the first period. This similarly holds with
+customer set~$\mathscr{B}$ and customers~$y$ for firm~$B$. The model structure assumed by \citet{Choe.2018} in conjunction with the
+tracking mechanism implies both firms know the location of the indifferent consumer \textcolor{red}{hier schon mit $z$ benennen ja/nein?}
+(marginally above (below) the rightmost (leftmost) consumer in their set of first-period customers, depending on whether the firm served
+the customers to left (right) of the indifferent consumer) and can, with certainty, assign non-customers their first-period supplier since
+there are only two firms and the world is linear. If the model were to include $n > 3$ competing firms, setting an efficient poaching price
+would likely be a much more involved process for any given firm. \\
 % Period 2
-The pricing strategies available to firm $i$ in period $\tau=2$ are determined by the informational asymmetries that result from the outcome
+The pricing strategies available to firm $i$ in period $\tau=2$ are determined by the information asymmetries which result from the outcome
 of the location game. \citet[p. 5672]{Choe.2018} let firms set two different types of prices in period $\tau=2$. Based on the private
-information obatained in $\tau=1$, firms engage in price discrimination in two disctinct ways. They\footnote{For brevity I assume the perspective
-of firm $A$ in the following description of price setting.} discriminate \textit{between} first-period customers (all $x\in\mathscr{A}$)
-and consumers that chose the competitor (all $x\notin\mathscr{A}$, i.e. all $x\in\mathscr{B}$ since the authors assume a duopoly) but also
+information obatained in $\tau=1$, firms engage in price discrimination in two disctinct ways. They\footnote{I assume the perspective
+of firm $A$ in the following description of price setting for brevity.} discriminate \textit{between} first-period customers (all $x\in\mathscr{A}$)
+and consumers who chose the competitor (all $x\notin\mathscr{A}$, i.e. all $x\in\mathscr{B}$ since the authors assume a duopoly) but also
 \textit{within} $\mathscr{A}$. Firms set a uniform poaching price, e.g. $P_A(\mathscr{B})$, aimed at all consumers who chose their competitor
 in the first period and an individualised price, e.g. $P_A(x)$. The poaching price is designed to incentivise consumers to switch to another
 firm in $\tau=2$ while the individualised pricing schedule is designed to appropriate the highest possible surplus based on the information
 obtained in the first period.
-However, each consumer chooses among their personsalised price and the two poaching prices. Note that the uniform poaching price can be viewed
+However, each consumer chooses among their personsalised price and the two poaching prices. The uniform poaching price can be viewed
 as primarily a function of set membership, while the individualised price offered to a given customer $x\in\mathscr{A}$ is a function of their
 specific location along the [0,\,1]-line \textcolor{red}{Mit oder ohne Bindestrich?}.
 Firms set their poaching price first, followed by the individualised prices (p. 5672). \textcolor{orange}{ibid? Autor ja/nein? Nur Seitenzahl?}
-Discriminating between the two major groups of consumers is \textcolor{red}{first/second/third; nachschauen was Choe et al. schreiben, aber auch mal neben Definitionen legen}
-price discrimination. Price discrimination against the consumers in $\mathscr{A}$ (or $\mathscr{B}$, respectively) is first-degree price discrimination. \\
+Discriminating between the two major groups of consumers is \textcolor{red}{first/second/third; nachschauen was Choe et al. schreiben (zB Section 3.1), aber auch mal neben Definitionen legen}
+price discrimination. Price discrimination against the consumers in $\mathscr{A}$ (or $\mathscr{B}$, respectively) in $\tau = 2$ constitutes first-degree price discriminationon or personalised pricing (p. 5676). \\
 % Discount factor
 \citet[p. 5672]{Choe.2018} endow firms with a positive discount factor $\delta_f \in [0,\,1]$. The discount factor is identical for both
 firms but may differ from the discount factor of the consumer population, $\delta_c$. The model produces asymmetric equilibria as long as
 $\delta_f > 0$ (p. 5673). Firms thus face an intertemporal decision problem to maximise their total discounted profit
 $\Pi_i = \pi^1_i + \delta_f\pi^2_i$ and compete for location (information) based on their pricing regimes.
 %
-
-%
 \subsubsection{Consumers}
 The model assumes a single set of homogenous consumers. Consumers are indexed by their location $x$ in Hotellings linear city.
-All consumers are within the interval $[0,\,1]$. Consumers incur transportation costs as a quadratic function of distance travelled
+All consumers are within the interval $[0,1]$. Consumers incur transportation costs as a quadratic function of distance travelled
 to their preferred retailer. All consumers have the same valuation $v$ for the good sold by the firms and only differ in their location
 within Hotellings linear city. Furthermore, all consumers have an identical discount factor, $\delta_c$, which may differ from $\delta_f$,
 the discount factor of the duopolists; while \citet{Fudenberg.2000} assume $\delta_c = \delta_f = \delta$, \citet{Choe.2018} assume the
-general case of $\delta_c \neq \delta_f$ (p. 5673). For $\delta_c$ consumers are completely myopic and disregard the utility derived
-from the second-period purchase while $\delta_c = 1$ implies that consumers value both instances of purchasing the good equally.
+general case of $\delta_c \neq \delta_f$ (p. 5673). For $\delta_c = 0$ consumers are completely myopic and disregard the utility derived
+from the second-period purchase while $\delta_c = 1$ implies consumers value both instances of purchasing the good equally.
 Consumers are price takers and are de facto only a source of demand for firms; they have no meaningful action set. The only variation
-among consumers results from their location on the $[0,\,1]$ interval and by extension the different transport costs that are incurred
-by different consumers. Household in a given period is defined as $v - P_i(x)-t(x-l)^2$ when buying from firm~$i$ (p. 5672). $v$ is a
-consumers utility from consumption, $P_i(x)$ is the price set by firm~$i = A,\,B$ for consumer $x$. That firm is located at $l$, implying distance
+among consumers results from their location on the $[0,\,1]$ interval and by extension the different transport costs which are incurred
+by different consumers. Household utility in a given period is defined as $v - P_i(x)-t(x-l)^2$ when buying from firm~$i$ (p. 5672). $v$ is a
+consumer's utility from consumption, $P_i(x)$ is the price set by firm~$i = A,B$ for consumer $x$. That firm is located at $l$, implying distance
 travelled is $|x-l|$. Recall that firms set a uniform price in the first period, a uniform poaching price in the second period but also engage
-in personalised pricing in period where possible. Thus, consumers effectively encounter five different prices over the course of the game. 
+in personalised pricing in period where possible, implying that consumers effectively face five different prices over the course of the game.
+\textcolor{red}{Nachfolgendes ggf verschieben bzw. zumindest die letzten beiden Sätze zu den Erweiterungen anpassen}
 While never explicitly stated, consumers seem to maximise expected utility 
 \begin{align} \label{eq:consumer-expected-utility}
 	v - P^1_i(x)-t^1(x-l_i)^2 + \delta_c [v - P^2_j(x)-t^2(x-l_j)^2]
 \end{align}
 which is simply the discounted sum of the individual utilities. Here, the superscripts refer to the period in which the price is paid and the
-transport costs are incurred, respectively. Making this disctinction for prices is obvious. However, since consumers may switch from one firm
-to another when making their purchase decision in $\tau = 2$, consumers may travel some other distance relative to $\tau = 1$ and thus incur
-the corresponding transportation costs. Since customers can remain loyal to their first-period choice, $i = j$ is possible.
-\textcolor{red}{In Section~\ref{sec:choe-extensions} I consider extensions that introduce heterogeneity to the set of consumers, such as departing
+transport costs are incurred, respectively, by a given consumer $x$. Making this disctinction for prices is obvious. However, since consumers
+may switch from one firm to another when making their purchase decision in $\tau = 2$, consumers may travel some other distance relative to
+$\tau = 1$ and incur different transportation costs. Since customers can remain loyal to their first-period choice, $i = j$ is possible.
+As consumers have no meaningful actions to chose from in the original model by \citet{Choe.2018}, \eqref{eq:consumer-expected-utility} will
+serve as the basis for the extensions discussed in section~\ref{sec:choe-extensions}.
+\textcolor{red}{In section~\ref{sec:choe-extensions} I consider extensions that introduce heterogeneity to the set of consumers, such as departing
 from the assupmtion of a single discount factor $\delta_c$.}
 %
 \subsubsection{Equilibria and Theoretical Results} \label{ssec:choe-results}
@@ -270,7 +273,7 @@ For given values of $\delta_c, \delta_f$ the prices set by firms in period $\tau
 the (constant) scaling factor used to compute transportation costs.
 \subsection{Related Literature (tbd)}
 \begin{itemize}
-	\item p. 5672: ``we abstract away from these issues mainly because our aim is to clearly understand how changes in informational assumptions lead to different equilibria
+	\item p. 5672: ``we abstract away from these issues mainly because our aim is to clearly understand how changes in information assumptions lead to different equilibria
 	in otherwise the same model as Fudenberg and Tirole (2000)''
 	\item die Autoren nennen 3 Referenzmodelle, mit denen sie sich vergleichen (ua FT2000), ggf gibt es noch andere; die im Artikel genannten sind relativ alt
 	\item Ähnlichkeiten zu Armstrong/Vickers
